--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "miment": "0.0.8",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
