--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@xunlei/vue-context-menu": "^1.0.2",
     "element-ui": "^2.0.1",
     "lodash": "^4.17.4",
     "miment": "0.0.8",
